--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -52,7 +52,7 @@ jobs:
         with:
           test-name: Evaluator
           setup-command: mvn clean compile
-          command: mvn exec:java -Dexec.mainClass="ar.edu.utn.dds.k3003.Evaluador"
+          command: mvn clean compile exec:java -D"exec.mainClass=ar.edu.utn.dds.k3003.app.WebApp"
           timeout: 10
           max-score: 4
       - name: Determinar el tipo de fachada
